# aeo-backend

./: Dockerfile  pyproject.toml  ruff.toml  test_complete_flow.py  test_complete_flow_with_analysis.py  test_deep_query.py  test_focused_analysis.py  test_llm_service.py  test_openai_direct.py  test_openai_web_search_final.py  test_pocketbase.py  test_ranking_question.py
app/: main.py
app/routes/: query.py
app/services/: embedding_service.py  llm_analysis.py  llm_service.py  pocketbase_service.py
